// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/DropDownButton Bordered List 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fXynhf ifKwFV sc-jIAOiI bpUFTZ"
    >
      <span>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv sc-fbPSWO fpENtd"
          type="button"
        >
          Dropdown
        </button>
        <button
          class="StyledButton-sc-323bzc-0 iPrszx sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv sc-ckMVTt gAKBUg"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
              fill="currentColor"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fXynhf ifKwFV sc-jIAOiI bpUFTZ"
    >
      <span>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv sc-fbPSWO fpENtd"
          type="button"
        >
          Dropdown
        </button>
        <button
          class="StyledButton-sc-323bzc-0 iPrszx sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv sc-ckMVTt gAKBUg"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
              fill="currentColor"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton Drop Up 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds hitktz"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fXynhf ifKwFV sc-jIAOiI bpUFTZ"
      >
        <span>
          <button
            class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv sc-fbPSWO fpENtd"
            type="button"
          >
            Dropdown
          </button>
          <button
            class="StyledButton-sc-323bzc-0 iPrszx sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv sc-ckMVTt gAKBUg"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
                fill="currentColor"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton Icon Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fXynhf ifKwFV sc-jIAOiI bpUFTZ"
    >
      <button
        class="StyledButton-sc-323bzc-0 jBNLlX sc-breuTD sc-ksZaOG Krizp jFzPEx sc-dIouRR kAoSkv sc-TRNrF eEcMpL"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chevron-down "
          color="#444444"
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton Joined 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fXynhf ifKwFV sc-jIAOiI bpUFTZ"
    >
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv sc-TRNrF eEcMpL"
        type="button"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK cBvces"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds dLaGQT"
          >
            Dropdown
          </div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton No List Formatting 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fXynhf ifKwFV sc-jIAOiI bpUFTZ"
    >
      <span>
        <button
          class="StyledButton-sc-323bzc-0 gvCdQt sc-breuTD sc-ksZaOG Krizp jFzPEx sc-dIouRR kAoSkv sc-fbPSWO fpENtd"
          type="button"
        />
        <button
          class="StyledButton-sc-323bzc-0 jBNLlX sc-breuTD sc-ksZaOG Krizp jFzPEx sc-dIouRR kAoSkv sc-ckMVTt gAKBUg"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down "
            color="#444444"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
              fill="currentColor"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton With Primary Button 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fXynhf ifKwFV sc-jIAOiI bpUFTZ"
    >
      <button
        class="StyledButton-sc-323bzc-0 gvCdQt sc-breuTD sc-ksZaOG Krizp jFzPEx sc-dIouRR kAoSkv sc-TRNrF eEcMpL"
        type="button"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK cBvces"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds dLaGQT"
          >
            Dropdown
          </div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
